--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <h2>Application Developer</h2>
 
       <nav>
-    <ul class="nav">
+    <ul >
       <li><a href="index.html" class="active">Home</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
@@ -23,7 +23,7 @@
   </header>
     
  <main>
-  <section>
+  <section class="tagline">
     <div class="content-wrapper">
       <h3>A bit more about me</h3>
       <p>Hey I am Sergio, I work for <a target="_blank" href="https://www.codeschool.com">Code School</a> and I love writing JavaScript!</p>
@@ -31,7 +31,8 @@
   </section>
 
 
-  <section>
+  <section class="skills">
+      
     <div class="content-wrapper">
       <h3>Skills</h3>
       <p>Here are some of the technologies I enjoy writing day-to-day:</p>
@@ -45,7 +46,7 @@
     </div>
      </section>
 
-  <section>
+  <section class="contact">
     <div class="content-wrapper">
       <h3>How to contact me</h3>
       <p>The easiest way to contact me is via twitter: <a target="_blank" href="https://twitter.com/hashtagserg">@hashtagserg</a></p>
